--- a/package.json
+++ b/package.json
@@ -16,17 +16,21 @@
     "bootstrap": "^5.0.2",
     "core-js": "^3.6.5",
     "vue": "^3.1.4",
-    "vue-router": "^4.0.10"
+    "vue-router": "^4.0.10",
+    "webpack": "^4.46.0",
+    "webpack-cli": "^4.7.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "^3.1.1",
     "@vue/cli-service": "^4.5.13",
-    "@vue/compiler-sfc": "^3.0.0",
+    "@vue/compiler-sfc": "^3.1.4",
     "babel-eslint": "^10.1.0",
     "electron": "^13.1.5",
     "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^7.0.0"
+    "eslint-plugin-vue": "^7.0.0",
+    "vue-loader": "^15.9.7",
+    "vue-template-compiler": "^2.6.14"
   },
   "eslintConfig": {
     "root": true,
